兼容java8模式下的语法改下重构